small edits from a big re-read

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1270,6 +1270,44 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{thompson1996,
+       author = {{Thompson}, M.~J. and {Toomre}, J. and {Anderson}, E.~R. and
+         {Antia}, H.~M. and {Berthomieu}, G. and {Burtonclay}, D. and
+         {Chitre}, S.~M. and {Christensen-Dalsgaard}, J. and {Corbard}, T. and
+         {De Rosa}, M. and {Genovese}, C.~R. and {Gough}, D.~O. and
+         {Haber}, D.~A. and {Harvey}, J.~W. and {Hill}, F. and {Howe}, R. and
+         {Korzennik}, S.~G. and {Kosovichev}, A.~G. and {Leibacher}, J.~W. and
+         {Pijpers}, F.~P. and {Provost}, J. and {Rhodes}, E.~J., Jr. and
+         {Schou}, J. and {Sekii}, T. and {Stark}, P.~B. and {Wilson}, P.~R.},
+        title = "{Differential Rotation and Dynamics of the Solar Interior}",
+      journal = {Science},
+         year = 1996,
+        month = may,
+       volume = {272},
+       number = {5266},
+        pages = {1300-1305},
+          doi = {10.1126/science.272.5266.1300},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996Sci...272.1300T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reinhold2020,
+       author = {{Reinhold}, Timo and {Hekker}, Saskia},
+        title = "{Stellar rotation periods from K2 Campaigns 0-18. Evidence for rotation period bimodality and simultaneous variability decrease}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = mar,
+       volume = {635},
+          eid = {A43},
+        pages = {A43},
+          doi = {10.1051/0004-6361/201936887},
+archivePrefix = {arXiv},
+       eprint = {2001.08214},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...635A..43R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @ARTICLE{brown2011,
        author = {{Brown}, Timothy M. and {Latham}, David W. and {Everett}, Mark E. and
@@ -1290,7 +1328,6 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2011AJ....142..112B},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 
 @ARTICLE{kiman2019,
        author = {{Kiman}, Rocio and {Schmidt}, Sarah J. and {Angus}, Ruth and
