--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -28,14 +28,15 @@ However, in the NGC 6811 cluster which is around 1 Gyr \citep{janes2011,
 sandquist2016},
 late-K dwarfs rotate at the {\it same rate} as early-K dwarfs
 \citep{curtis2019}.
-In other words, convection zone depth cannot be the only variable that affects
-stellar spin-down rate.
+% In other words, convection zone depth cannot be the only variable that affects
+% stellar spin-down rate.
 New semi-empirical models that vary the rate of angular momentum
 redistribution in the interiors of stars are able to reproduce this flattened
 period--color relation \citep{spada2019}.
 These models suggest that mass and age-dependent angular momentum transport
 between the cores and envelopes of stars has a significant impact on their
 surface rotation rates.
+
 Another example of unexpected rotational evolution is seen in old field stars
 which appear to rotate more rapidly than classical gyrochronology models
 predict \citep{angus2015, vansaders2016, vansaders2018, metcalfe2019}.
@@ -54,7 +55,7 @@ In this paper, we use the velocity dispersions of field stars to qualitatively
 explore the rotational evolution of GKM dwarfs, and show that kinematics could
 provide a gyrochronology calibration sample.
 
-\subsection{Using kinematics as an age proxy}
+\subsection{Using velocity dispersion as an age proxy}
 
 Stars are thought to be born in the thin disk of the Milky Way (MW), orbiting
 the Galaxy with a low out-of-plane, or vertical, velocity (\vz),
@@ -70,7 +71,7 @@ indication that stars formed dynamically ``hotter'' in the past
 \citep[e.g.,][]{bird2013}.
 In either case, the vertical velocity distribution is observed to depend
 significantly on stellar age.
-While the velocity of any individual star only provides a weak age constraint,
+While the velocity of any individual star only provides a weak age constrain
 because its velocity depends on its current position in its orbit, the
 velocity {\it dispersion} of a {\it group} of stars indicates whether that
 group is old or young relative to other groups.
