--- a/paper/method.tex
+++ b/paper/method.tex
@@ -101,8 +101,8 @@ bias.
 The \citet{angus2019} gyrochronology relation is a simple polynomial model,
 fit to the period-color relation of Praesepe.
 Inaccuracies at low masses are a typical feature of empirically calibrated
-gyrochronology models: since there are no (or at least very few) old M dwarfs
-with rotation periods, the models are poorly calibrated for these stars.
+gyrochronology models since there are no (or at least very few) old M dwarfs
+with rotation periods and the models are poorly calibrated for these stars.
 \begin{figure}
   \caption{
       Top: de-reddened MS \kepler\ stars with \mct\ rotation periods, plotted
