--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -99,11 +99,11 @@
     Jennifer van Saders$^6$,  % signed off
     Rocio Kiman$^{7, 1}$,  % signed off
     Dan Foreman-Mackey$^2$,  % signed off
-    Yuxi Lu$^{1, 3}$,  % signed off
+    Yuxi Lu$^{3, 1}$,  % signed off
     Lauren Anderson$^8$}  % signed off
 
-\altaffiltext{\amnh}{American Museum of Natural History, Central Park West,
-Manhattan, NY, USA}
+\altaffiltext{\amnh}{Department of Astrophysics, American Museum of Natural
+History, 200 Central Park West, Manhattan, NY, USA}
 \altaffiltext{\cca}{Center for Computational Astrophysics, Flatiron Institute,
 162 5th Avenue, Manhattan, NY, USA}
 \altaffiltext{\columbia}{Department of Astronomy, Columbia
