--- a/paper/results.tex
+++ b/paper/results.tex
@@ -209,10 +209,10 @@ surface regions {\it at a younger age than M dwarfs}.
 \begin{figure}
   \caption{
     Velocity dispersions for the entire \kepler\ field divided by the velocity
-    dispersion of stars with measured rotation periods in \mct,
+    dispersions of stars with measured rotation periods in \mct,
     as a function of effective temperature.
-    A larger ratio means that the overall \kepler\ field is older, on average,
-    than stars in the \mct\ catalog.
+    A larger ratio indicates that the overall \kepler\ field is older, on
+    average, than stars in the \mct\ catalog.
     As this ratio approaches unity the two populations have similar kinematic
     ages.
     The large ratio for the hottest stars indicates that G dwarfs become
