--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -1,8 +1,5 @@
-% zip files.zip
-% ms.tex abstract.tex intro.tex method.tex results.tex conclusion.tex
-% acknowledgements.tex appendix.tex
-% CMD_cuts_double.pdf main_figure.pdf gap.pdf vb_vs_teff.pdf vb_vz.pdf
-% bib.bib ms.pdf
+% zip files.zip ms.tex abstract.tex intro.tex method.tex results.tex conclusion.tex acknowledgements.tex appendix.tex CMD_cuts_double.pdf main_figure.pdf gap.pdf vb_vs_teff.pdf vb_vz.pdf field_comparison.pdf bib.bib ms.pdf
+
 
 \documentclass[useAMS, usenatbib, preprint, 12pt]{aastex}
 \usepackage{cite, natbib}
