--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -20,4 +20,4 @@ We find that the oldest \kepler\ stars with measured rotation periods are
 late-K and early-M dwarfs, indicating that these stars maintain spotted
 surfaces and stay magnetically active longer than more massive stars.
 Finally, based on their kinematics, we confirm that many rapidly rotating
-K-dwarfs are likely to be synchronized binaries.
+GKM dwarfs are likely to be synchronized binaries.
